--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p id='output'></p>
-<input type="text" autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateTwo(this.value);}"></input>
+<input type="text" autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateThree(this.value);}"></input>
 </body>
 </html>
