--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p id='output'></p>
-<textarea rows='5' cols='50' autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateThree(this.value);}"></textarea>
+<textarea rows='8' style='width:screen.width;' autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateThree(this.value);}"></textarea>
 </body>
 </html>
