--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <p id='output'></p>
 <textarea id='input' rows='8' style='width:100%;' autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateThree(this.value);}"></textarea>
-<button onclick='if(document.getElementById('input').value.indexOf('.')>=1){extrapolateThree(document.getElementById('input').value);}'>Recalculate</button>
+<button onclick="if(document.getElementById('input').value.indexOf('.')>=1){extrapolateThree(document.getElementById('input').value);}">Recalculate</button>
   </body>
 </html>
