Compatibility with extrapolating by 4.
Next plan is to add extrapolating by N. I will have this be picked somewhat at random.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p id='output'></p>
-<textarea id='input' rows='8' style='width:100%;' autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateThree(this.value);}"></textarea>
-<button onclick="if(document.getElementById('input').value.indexOf('.')>=1){extrapolateThree(document.getElementById('input').value);}">Recalculate</button>
+<textarea id='input' rows='8' style='width:100%;' autofocus onchange="if(this.value.indexOf('.')>=1){extrapolateFour(this.value);}"></textarea>
+<button onclick="if(document.getElementById('input').value.indexOf('.')>=1){extrapolateFour(document.getElementById('input').value);}">Recalculate</button>
   </body>
 </html>
