--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <button onclick="if(document.getElementById('input').value.indexOf('.')>=1){extrapolateN(document.getElementById('input').value);}">Recalculate</button>
 <br>
 <h1>Randomness level</h1>
-<input id='slider' type='range' min='0' max='document.getElementById('input').value.split(" ").length' value='1'></input>
+<input id='slider' type='range' min='0' max=`document.getElementById('input').value.split(" ").length` value='1'></input>
 </body>
 </html>
